--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "448b3ea1",
+   "id": "69ed6a27",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9c2f99a",
+   "id": "174e20e5",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e380870",
+   "id": "81970a3f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -65,6 +65,7 @@
     "import pandas as pd\n",
     "from pyarrow.parquet import read_table\n",
     "\n",
+    "import numpy as np\n",
     "import polars as pl\n",
     "import skrub\n",
     "from pathlib import Path\n",
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "156e1f3f",
+   "id": "03ab53ac",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d44cbd7",
+   "id": "f8da8a6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94b616fc",
+   "id": "95e4d3ff",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "752d9263",
+   "id": "2da25799",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea4df55e",
+   "id": "7dda7283",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f48b5099",
+   "id": "f3baf392",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24d2108b",
+   "id": "7a2a0dbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27881b31",
+   "id": "e1fb5c0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "929e1f05",
+   "id": "f2fdb315",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8375d980",
+   "id": "8247bc33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c077692",
+   "id": "ab0057c9",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d448d467",
+   "id": "bc2504e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05a839a3",
+   "id": "ecb8946e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12447c30",
+   "id": "bd293ab5",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5883083d",
+   "id": "c1c5a49c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92a3c819",
+   "id": "04adba78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e768f16e",
+   "id": "0b9a6f34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b74f8c8",
+   "id": "5b6c5797",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0059512",
+   "id": "20f008de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a88684e3",
+   "id": "294b7344",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d67ee37",
+   "id": "c4aa0bd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32b1e76c",
+   "id": "a5a4a523",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d36630c",
+   "id": "98da88b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "975e777f",
+   "id": "b937256e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "386479e6",
+   "id": "70bb6d71",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfb0ac3e",
+   "id": "7866831a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "600fe891",
+   "id": "5f5e9e29",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea480110",
+   "id": "343bc6b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec44b2b5",
+   "id": "8da382b9",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a00deb67",
+   "id": "432e5a73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5ababb7",
+   "id": "c4a062d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "383e4337",
+   "id": "5cd41945",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0c94a6e",
+   "id": "5d00f96e",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7c799ba",
+   "id": "cb2ffab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de87cc0c",
+   "id": "5ec65ecf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eebc1d63",
+   "id": "e5b9e4bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84c78c0e",
+   "id": "40a48565",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "681ebeac",
+   "id": "ad931deb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e055bae",
+   "id": "25cbd56d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21738f8d",
+   "id": "a58e0a5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de2d3b4a",
+   "id": "e638666c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e153fe2a",
+   "id": "56cf92f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,10 +932,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9de5496a",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "2473ca62",
+   "metadata": {},
    "outputs": [],
    "source": [
     "cv_predictions = collect_cv_predictions(\n",
@@ -946,13 +945,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e699f4",
+   "id": "15c188b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "\n",
     "def plot_reliability_diagram(cv_predictions, n_bins=10):\n",
     "    # min and max load over all predictions and observations for any folds:\n",
     "    all_loads = pl.concat(\n",
@@ -964,7 +960,27 @@
     "    all_loads = pl.concat(all_loads[\"load_mw\", \"predicted_load_mw\"])\n",
     "    min_load, max_load = all_loads.min(), all_loads.max()\n",
     "    scale = altair.Scale(domain=[min_load, max_load])\n",
-    "    chart = None\n",
+    "    chart = (\n",
+    "        altair.Chart(\n",
+    "            pl.DataFrame(\n",
+    "                {\n",
+    "                    \"predicted_load_mw\": [min_load, max_load],\n",
+    "                    \"mean_load_mw\": [min_load, max_load],\n",
+    "                    \"label\": [\"Perfect\"] * 2,\n",
+    "                }\n",
+    "            )\n",
+    "        )\n",
+    "        .mark_line(tooltip=True, opacity=0.5, stroke=\"dotted\")\n",
+    "        .encode(\n",
+    "            x=altair.X(\"predicted_load_mw:Q\", scale=scale),\n",
+    "            y=altair.Y(\"mean_load_mw:Q\", scale=scale),\n",
+    "            color=altair.Color(\n",
+    "                \"label:N\",\n",
+    "                scale=altair.Scale(range=[\"black\"]),\n",
+    "                legend=altair.Legend(title=\"Legend\"),\n",
+    "            ),\n",
+    "        )\n",
+    "    )\n",
     "    for i, cv_predictions_i in enumerate(cv_predictions):\n",
     "        mean_per_bins = (\n",
     "            cv_predictions_i.group_by(\n",
@@ -979,18 +995,14 @@
     "            .sort(\"predicted_load_mw\")\n",
     "        )\n",
     "\n",
-    "        this_chart = (\n",
+    "        chart += (\n",
     "            altair.Chart(mean_per_bins)\n",
-    "            .mark_line(tooltip=True)\n",
+    "            .mark_line(tooltip=True, point=True, opacity=0.5)\n",
     "            .encode(\n",
     "                x=altair.X(\"mean_predicted_load_mw:Q\", scale=scale),\n",
     "                y=altair.Y(\"mean_load_mw:Q\", scale=scale),\n",
     "            )\n",
     "        )\n",
-    "        if chart is None:\n",
-    "            chart = this_chart\n",
-    "        else:\n",
-    "            chart += this_chart\n",
     "    return chart\n",
     "\n",
     "\n",
@@ -1000,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b6bee0c",
+   "id": "ad819eb1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1022,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "958c26fe",
+   "id": "1ad07268",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea1c2e1a",
+   "id": "d502ef95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b249732",
+   "id": "1e8732ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf6ce680",
+   "id": "dfd47405",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09a40d0f",
+   "id": "70ba30f4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1095,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "158bc33c",
+   "id": "89b7ed64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbd85fba",
+   "id": "287d5e29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8f511c3",
+   "id": "ecbb967f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05f2dd50",
+   "id": "93e12868",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0a30c96",
+   "id": "afd5921b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "138af3aa",
+   "id": "4d67e20b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0edc61ff",
+   "id": "c56357c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37334390",
+   "id": "17964a8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "314e8c32",
+   "id": "3b80a070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79383806",
+   "id": "5beb3ba0",
    "metadata": {},
    "outputs": [],
    "source": []
