--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5e5c4aa3",
+   "id": "17ee43e3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff2bafb5",
+   "id": "3abc4caa",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec132a87",
+   "id": "c7154d6d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -65,6 +65,7 @@
     "import pandas as pd\n",
     "from pyarrow.parquet import read_table\n",
     "\n",
+    "import numpy as np\n",
     "import polars as pl\n",
     "import skrub\n",
     "from pathlib import Path\n",
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60a7e976",
+   "id": "c16a1254",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37a92475",
+   "id": "c061d025",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c262049f",
+   "id": "fd518e5c",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4274f18f",
+   "id": "6bf3950a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65ab81ee",
+   "id": "5b277708",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "874821c6",
+   "id": "093dfc66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22e99d96",
+   "id": "5f68c814",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40f90f4b",
+   "id": "71b8a1d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeb8ece8",
+   "id": "72924b37",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c7b2a89",
+   "id": "7f0d31a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2d04375",
+   "id": "dafca952",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35e0d234",
+   "id": "352755ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cbafefe",
+   "id": "8ccfe522",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "682414de",
+   "id": "993eaac1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f080bfd2",
+   "id": "815e17d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa5ebadd",
+   "id": "36cc7354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca830c91",
+   "id": "0eb166c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f22d8ece",
+   "id": "ac2e97b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0833897f",
+   "id": "b087bbd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4971a711",
+   "id": "5d98469a",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47afeb81",
+   "id": "f9ce56bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "036fecc4",
+   "id": "cb69f07f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "871b0ce4",
+   "id": "17126ab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e941f50d",
+   "id": "d098f65c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72d20e0b",
+   "id": "ad3da86f",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2cddb60",
+   "id": "2e6f1116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fe522e7",
+   "id": "41612bd1",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54043df2",
+   "id": "1e973081",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42ec6aa3",
+   "id": "2215c38b",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12425e9d",
+   "id": "b2ba3675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfe84d9c",
+   "id": "c0b90f74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1403ff8c",
+   "id": "bd23218e",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c61145",
+   "id": "ec0f823a",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2499cfb9",
+   "id": "5d7d3884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5066b46f",
+   "id": "90257c1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b8ed9a5",
+   "id": "209ae10f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a93ddc5",
+   "id": "6aee74d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acabcb74",
+   "id": "39dff989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5b9bdfb",
+   "id": "9641c9e5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4ca0f5f",
+   "id": "c9c73445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a4495d3",
+   "id": "13fd8aee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18832729",
+   "id": "b0acd3c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,10 +932,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4935fb09",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "9b555136",
+   "metadata": {},
    "outputs": [],
    "source": [
     "cv_predictions = collect_cv_predictions(\n",
@@ -946,13 +945,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5786e262",
+   "id": "1339e50d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "\n",
     "def plot_reliability_diagram(cv_predictions, n_bins=10):\n",
     "    # min and max load over all predictions and observations for any folds:\n",
     "    all_loads = pl.concat(\n",
@@ -964,7 +960,27 @@
     "    all_loads = pl.concat(all_loads[\"load_mw\", \"predicted_load_mw\"])\n",
     "    min_load, max_load = all_loads.min(), all_loads.max()\n",
     "    scale = altair.Scale(domain=[min_load, max_load])\n",
-    "    chart = None\n",
+    "    chart = (\n",
+    "        altair.Chart(\n",
+    "            pl.DataFrame(\n",
+    "                {\n",
+    "                    \"predicted_load_mw\": [min_load, max_load],\n",
+    "                    \"mean_load_mw\": [min_load, max_load],\n",
+    "                    \"label\": [\"Perfect\"] * 2,\n",
+    "                }\n",
+    "            )\n",
+    "        )\n",
+    "        .mark_line(tooltip=True, opacity=0.5, stroke=\"dotted\")\n",
+    "        .encode(\n",
+    "            x=altair.X(\"predicted_load_mw:Q\", scale=scale),\n",
+    "            y=altair.Y(\"mean_load_mw:Q\", scale=scale),\n",
+    "            color=altair.Color(\n",
+    "                \"label:N\",\n",
+    "                scale=altair.Scale(range=[\"black\"]),\n",
+    "                legend=altair.Legend(title=\"Legend\"),\n",
+    "            ),\n",
+    "        )\n",
+    "    )\n",
     "    for i, cv_predictions_i in enumerate(cv_predictions):\n",
     "        mean_per_bins = (\n",
     "            cv_predictions_i.group_by(\n",
@@ -979,18 +995,14 @@
     "            .sort(\"predicted_load_mw\")\n",
     "        )\n",
     "\n",
-    "        this_chart = (\n",
+    "        chart += (\n",
     "            altair.Chart(mean_per_bins)\n",
-    "            .mark_line(tooltip=True)\n",
+    "            .mark_line(tooltip=True, point=True, opacity=0.5)\n",
     "            .encode(\n",
     "                x=altair.X(\"mean_predicted_load_mw:Q\", scale=scale),\n",
     "                y=altair.Y(\"mean_load_mw:Q\", scale=scale),\n",
     "            )\n",
     "        )\n",
-    "        if chart is None:\n",
-    "            chart = this_chart\n",
-    "        else:\n",
-    "            chart += this_chart\n",
     "    return chart\n",
     "\n",
     "\n",
@@ -1000,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2898e104",
+   "id": "9188f54b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1022,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65ebea73",
+   "id": "def0ac46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "761d8a8e",
+   "id": "6aaf9f3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "662b15b8",
+   "id": "307912c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b0c890b",
+   "id": "ab90da94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "305184ec",
+   "id": "3ee1218b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1095,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c57d1570",
+   "id": "366a22d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e85dcab",
+   "id": "c4370dca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a85471ba",
+   "id": "d41d7e99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c66c252f",
+   "id": "ba60aa75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f9f3211",
+   "id": "e1598963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5ae655f",
+   "id": "aaf15c2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f6a3769",
+   "id": "9add83c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47225475",
+   "id": "444be8dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98e0e90a",
+   "id": "59b5c66c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3237eae",
+   "id": "e5670899",
    "metadata": {},
    "outputs": [],
    "source": []
